manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: namespace-admission
  namespace: namespace-admission
  labels:
    name: namespace-admission
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 8080
  selector:
    name: namespace-admission
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: namespace-admission
  namespace: namespace-admission
  labels:
    name: namespace-admission
spec:
  replicas: 1
  selector:
      matchLabels:
        name: namespace-admission
  template:
    metadata:
      name: namespace-admission 
      labels:
        name: namespace-admission
    spec:
      containers:
        - name: webhook
          image: harbor/develop/srujan/admission:1.0
          imagePullPolicy: Never
          resources:
            limits:
              memory: 50Mi
              cpu: 300m
            requests:
              memory: 50Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: namespace-admission-certs
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: namespace-admission
webhooks:
  - admissionReviewVersions: 
    - v1
    name: namespace-admission.srujan.ns
    clientConfig:
      service:
        name: namespace-admission
        namespace: namespace-admission
        path: "/"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJeU1ETXlOREl4TWpFek0xb1hEVE15TURNeU1USXhNakV6TTFvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBSnpDClpjZTQ4aHRySGd2UG9iZi9iYjFuTzJ6bXRkbnNsdHJtanIxcDVIdDBrMDk2azdGd2ZDK09jRmpjdDJrZkZjTWkKcVpoV1gzTWF1eGdPb0NqVXM5QlNna09yNTYvTm9XTTVuMjRHa3JvZjF5VmExZHhYbXIxQTVLanVvRDladTBtLwpQa1NqalNSWEgz [...]
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["namespaces"]
    sideEffects: None
    failurePolicy: Ignore
